unpackaged/main/default/objects/Hair_Relaxer_Case__c/Hair_Relaxer_Case__c.object-meta.xml
<CustomObject>
    <description>Used to store Hair Relaxer specific fields that match one to one with LawRuler.  Built to meet demands in the right time frame given by company.  When more time and priority is given, these should be moved to standardized fields into the campaign case.</description>
    <label>Hair Relaxer Case</label>
    <nameField>
        <displayFormat>HR-{000000}</displayFormat>
        <label>Hair Relaxer Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hair Relaxer Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>