unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Age_of_First_Use__c.field-meta.xml
<CustomField>
    <fullName>Age_of_First_Use__c</fullName>
    <label>Age of First Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>