unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Age_when_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>Age_when_Diagnosed__c</fullName>
    <label>Age when Diagnosed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>