unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Cancer_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Addresses__c</fullName>
    <description>39.Please list the addresses of the clinic(s)/ hospital(s) you visited for your cancer treatment?</description>
    <label>Cancer Addresses</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>