unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/City_1__c.field-meta.xml
<CustomField>
    <fullName>City_1__c</fullName>
    <description>33.City</description>
    <label>City 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>