unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/City_2__c.field-meta.xml
<CustomField>
    <fullName>City_2__c</fullName>
    <description>40.City</description>
    <label>City 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>