unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Consecutive_Years_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Years_of_Use__c</fullName>
    <description>Years of use for KS criteria</description>
    <label>Consecutive Years of Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>