unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Currently_Use_HR__c.field-meta.xml
<CustomField>
    <fullName>Currently_Use_HR__c</fullName>
    <label>Currently Use HR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>