unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance__c</fullName>
    <description>44.Do you have health insurance coverage?</description>
    <label>Health Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>