unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>Hear_about_us__c</fullName>
    <description>50.How did you hear about our law firm?</description>
    <label>Hear about us?</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>