unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Hair Relaxer Cases</relationshipLabel>
    <relationshipName>Hair_Relaxer_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>