unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Not_Continuous_Use_Dates__c.field-meta.xml
<CustomField>
    <fullName>Not_Continuous_Use_Dates__c</fullName>
    <label>Not Continuous Use Dates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>