unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Number_of_Cancer_Physicians__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cancer_Physicians__c</fullName>
    <description>36.How many care physicians did you have for your cancer treatment?</description>
    <label>Number of Cancer Physicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>