unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Number_of_Primary_Physicians__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Primary_Physicians__c</fullName>
    <label>Number of Primary Physicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>