unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Periods_of_no_use__c.field-meta.xml
<CustomField>
    <fullName>Periods_of_no_use__c</fullName>
    <label>Periods of no use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>