unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Pre_Existing_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Conditions__c</fullName>
    <description>25.What pre-existing conditions did/does the injured person have (e.g., diabetes, previous cancer, obesity, etc)?</description>
    <label>Pre-Existing Conditions</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>