unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Primary_Clinic_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Primary_Clinic_Addresses__c</fullName>
    <description>32.Please list the addresses of the clinic(s)/ hospital(s) you visited:</description>
    <label>Primary Clinic Addresses</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>