unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Profession_of_Injured_Party__c.field-meta.xml
<CustomField>
    <fullName>Profession_of_Injured_Party__c</fullName>
    <label>Profession of Injured Party</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>