unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Provider_Group__c.field-meta.xml
<CustomField>
    <fullName>Provider_Group__c</fullName>
    <description>46.If yes, please provide the provider group #:</description>
    <label>Provider Group #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>