unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>45.If yes, please provide the provider name:</description>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>