unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Provider_Policy__c.field-meta.xml
<CustomField>
    <fullName>Provider_Policy__c</fullName>
    <description>47.If yes, please provide the provider policy #:</description>
    <label>Provider Policy #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>