unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Receipts_and_or_Empty_Bottle__c.field-meta.xml
<CustomField>
    <fullName>Receipts_and_or_Empty_Bottle__c</fullName>
    <label>Receipts and/or Empty Bottle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>