unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Represented_for_Talcum__c.field-meta.xml
<CustomField>
    <fullName>Represented_for_Talcum__c</fullName>
    <description>Are you currently represented by an attorney, or have previously signed documents with another law firm regarding Hair Relaxer?

OR IF DX WITH OVARIAN CANCER: 
Are you currently represented by an attorney, or have previously signed documents with another law firm regarding Hair Relaxer or Talcum Powder?</description>
    <label>Represented for Talcum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currently signed with another firm</fullName>
            </value>
            <value>
                <fullName>Not currently signed with another firm regarding this matter</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>