unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Salon_Location__c.field-meta.xml
<CustomField>
    <fullName>Salon_Location__c</fullName>
    <label>Salon Location</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>