unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Salon_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Salon_Receipts__c</fullName>
    <label>Salon Receipts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>