unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Salon_Visited__c.field-meta.xml
<CustomField>
    <fullName>Salon_Visited__c</fullName>
    <label>Salon Visited</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>