unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/State_1__c.field-meta.xml
<CustomField>
    <fullName>State_1__c</fullName>
    <description>34.State</description>
    <label>State 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>