unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/State_2__c.field-meta.xml
<CustomField>
    <fullName>State_2__c</fullName>
    <description>41.State</description>
    <label>State 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>