unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Treatment_Info__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Info__c</fullName>
    <description>43.What sort of treatment?</description>
    <label>Treatment Info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>