unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/used_at_least_10_years_prior__c.field-meta.xml
<CustomField>
    <fullName>used_at_least_10_years_prior__c</fullName>
    <label>used at least 10 years prior DX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>