unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Used_Hair_Relaxer_Prior_to_DX__c.field-meta.xml
<CustomField>
    <fullName>Used_Hair_Relaxer_Prior_to_DX__c</fullName>
    <label>Used Hair Relaxer Prior to DX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>