unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Weight_at_DX__c.field-meta.xml
<CustomField>
    <fullName>Weight_at_DX__c</fullName>
    <label>Weight at DX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>