unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Zip_1__c.field-meta.xml
<CustomField>
    <fullName>Zip_1__c</fullName>
    <description>35.Zip</description>
    <label>Zip 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>