unpackaged/main/default/objects/Hair_Relaxer_Case__c/fields/Zip_2__c.field-meta.xml
<CustomField>
    <fullName>Zip_2__c</fullName>
    <description>42.Zip</description>
    <label>Zip 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>